# Graphic

./: .gitignore  01_drawPoint.cpp  02_drawLine.cpp  03_testMath.cpp  04_drawTriangle.cpp  05_drawImage.cpp  06_UVTexture.cpp  06_uvTexture.cpp  07_bilinear.cpp  08_textureWrap.cpp  09_transform.cpp  10_vao.cpp  11_draw.cpp  11_renderTriangle.cpp  12_clipSpace.cpp  12_cullFace.cpp  13_clipSpace.cpp  13_cullFace.cpp  14_depthTest.cpp  15_blending.cpp  16_texture.cpp  17_camera.cpp  18_light.cpp  19_model.cpp  CMakeLists.txt  README.md  main.cpp  testLight.cpp  testMath.cpp
application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  image.cpp  image.h  model.cpp  model.h
docs/: 1、brensenham直线绘制算法.md  1、cmake.md  2、brensenham直线绘制算法.md  2、三角形重心差值算法.md  3、c++返回引用.md  3、三角形重心差值算法.md  3、三角形重心插值算法.md  4、c++返回引用.md  5、双线性插值算法.md  6、法线变换与逆转置推导.md  7、3D渲染管线详解.md  cmake.md
global/: base.h
gpu/: CMakeLists.txt  bufferObject.cpp  bufferObject.h  clipper.cpp  clipper.h  dataStructures.h  frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h
gpu/shader/: defaultShader.cpp  defaultShader.h  lightShader.cpp  lightShader.h  textureShader.cpp  textureShader.h
gpu_old/: CMakeLists.txt  frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h
math/: CMakeLists.txt  math.h  mathFunction.h  matrix.h  vector.h
util/: helper.h
